@@ -1,3 +1,5 @@
+2021/02/08
+• Added emoji tracking.
 2021/01/30
 • Added alias "request feature" for "report bug".
 2020/10/22
